# primitive-ffi

./: .travis.yml  CHANGELOG.md  README.md  default.nix  primitive-ffi.cabal  primitive-foreign.cabal
nix/: overrides.nix
src/: PrimitiveFfi.hs
src/Data/Primitive/: Foreign.hs
test/: Spec.hs
