cabal-version: 2.2
name:
  primitive-ffi
version:
  0.1
synopsis:
  using the `Prim` interface for the FFI
description:
  using the `Prim` interface for the FFI
homepage:
  https://github.com/haskell-primitive/primitive-ffi
bug-reports:
  https://github.com/haskell-primitive/primitive-ffi/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Data
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    Data.Primitive.Foreign
  build-depends:
    , base >= 4.10.1.0 && < 4.13
    , primitive >= 0.6.4 && < 0.8
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/haskell-primitive/primitive-ffi.git
